Fixes #99 - Fancybox close button broken on hidpi screens

--- a/src/css/fancybox.less
+++ b/src/css/fancybox.less
@@ -262,12 +262,12 @@
 	   only screen and (min-device-pixel-ratio: 1.5){
 
 	#fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
-		background-image: url('../img/fancybox_sprite@2x.png');
+		background-image: url('../img/fancybox/fancybox_sprite@2x.png');
 		background-size: 44px 152px; /*The size of the normal image, half the size of the hi-res image*/
 	}
 
 	#fancybox-loading div {
-		background-image: url('../img/fancybox_loading@2x.gif');
+		background-image: url('../img/fancybox/fancybox_loading@2x.gif');
 		background-size: 24px 24px; /*The size of the normal image, half the size of the hi-res image*/
 	}
 }
